# film_grain

./: .gitignore  Cargo.toml  README.md  out.md
.github/workflows/: ci.yml  release.yml
benches/: bench_rendering.rs  film_grain.rs
benches/data/: boat.128.tiff  boat.256.tiff  boat.512.tiff  boat.64.tiff
benchmarks/: c_reference_benchmark_results.csv  reimplementation_benchmark_results.csv
crates/filmgrain-cli/: Cargo.toml
crates/filmgrain-cli/src/: main.rs
crates/filmgrain-core/: Cargo.toml
crates/filmgrain-core/src/: config.rs  error.rs  lib.rs  rng.rs  util.rs
crates/filmgrain-core/src/cpu/: grainwise.rs  mod.rs  pixelwise.rs
crates/filmgrain-core/src/gpu/: mod.rs  pipelines.rs
src/: choose.rs  cli.rs  color.rs  grainwise.rs  io.rs  lib.rs  main.rs  model.rs  params.rs  pixelwise.rs  prng.rs  rng.rs
src/color/: film_layer.rs  mod.rs  spectral_response.rs
src/rendering/: grain_wise.rs  mod.rs
src/rendering/cpu/: grain_wise.rs  mod.rs  pixel_wise.rs
src/rendering/gpu/: grain_wise.rs  mod.rs  pixel_wise.rs
src/shaders/: grain.wgsl  grain_wise.wgsl  pixel.wgsl  pixel_wise.wgsl
src/wgpu/: mod.rs
src/wgpu/shaders/: grain_wise.wgsl  pixel_wise.wgsl
tools/: film_grain_bench.py  highsample_analysis.py
